--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "mongoose": "^7.2.4",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
     "serve-favicon": "^2.5.0"
   }
 }
