--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
-    "connect-mongo": "^5.0.0",
+    "axios": "^1.2.5",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
-    "mongoose": "^7.2.4",
+    "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "serve-favicon": "^2.5.0"
   }
 }
