--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@yaireo/tagify": "^4.17.8",
     "axios": "^1.2.5",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
